--- a/src/Phonetics.css
+++ b/src/Phonetics.css
@@ -2,12 +2,13 @@
   text-decoration: none;
   color: #ec6d3f;
   opacity: 0.7;
-  border: 1px solid grey;
+  border: 1px solid #ec6d3f;
   border-radius: 10px;
   padding: 5px 10px;
   margin-right: 10px;
   line-height: 2.5;
   display: inline;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .Phonetics {
