--- a/src/Results.css
+++ b/src/Results.css
@@ -1,6 +1,7 @@
 h2 {
   font-family: "Indie Flower", cursive;
   color: #ec6d3f;
-  font-size: 30px;
-  font-style: bold;
+  font-size: 40px;
+  margin-bottom: 0px;
+  text-transform: capitalize;
 }
